syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.gbabler.msusers.grpc";

service WeatherService {
  rpc GetWeather(WeatherRequest) returns (WeatherResponse) {};
}

message WeatherRequest {
  string city = 1;
}

message WeatherResponse {
  string state = 1;
}